Tests/CoreExecution/try_catch_bind_error.out
Error occurred on line 3
Could not find a value for asdf
An error message
