Tests/CoreExecution/try_catch_bind_error.blz
:main
    try
        asdf()
        print("No error")
    catch
        print(error)
    end

    try
        throw "An error message"
    catch
        print(error)
    end

end
